--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "src/ROS-TCP-Endpoint"]
-	path = src/ROS-TCP-Endpoint
+[submodule "src/ros_tcp_endpoint"]
+	path = src/ros_tcp_endpoint
 	url = https://github.com/Unity-Technologies/ROS-TCP-Endpoint.git
 	branch = main-ros2
