--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "src/models/turtlebot3/meta_model/turtlebot3"]
-	path = src/models/turtlebot3/meta_model/turtlebot3
+[submodule "src/turtlebot3"]
+	path = src/turtlebot3
 	url = https://github.com/ROBOTIS-GIT/turtlebot3.git
 	branch = humble
 [submodule "src/ros_tcp_endpoint"]
